--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,174 +4,65 @@
 @string{aps = {American Physical Society,}}
 
 @article{Cuadrado2023,
-   abstract = {Nowadays, persuasive messages are increasingly frequent in social networks, which generates particular concern in several communities, given that persuasion seeks to guide others towards adopting ideas, attitudes, or actions that they consider to be beneficial to themselves. The efficient detection of news genre categories, detection of framing, and detection of persuasion techniques require several scientific disciplines, such as computational linguistics and sociology. Here we illustrate how we use lexical features given a news article to determine whether it is an opinion piece, aims to report factual news, or is satire. This paper presents a novel strategy for communication based on Lexical Weirdness. The results are part of our participation in Sub-Tasks 1 and 2 in SemEval 2023 Task 3.},
-   author = {Juan Cuadrado and Elizabeth Martinez and Anderson Morillo and Daniel Peña and Kevin Sossa and Juan Carlos Martinez-Santos and Edwin Puertas},
-   doi = {10.18653/V1/2023.SEMEVAL-1.214},
-   isbn = {9781959429999},
-   journal = {17th International Workshop on Semantic Evaluation, SemEval 2023 - Proceedings of the Workshop},
-   pages = {1551-1557},
-   publisher = {Association for Computational Linguistics},
-   title = {UTB-NLP at SemEval-2023 Task 3: Weirdness, Lexical Features for Detecting Categorical Framings, and Persuasion in Online News},
-   year = {2023},
+  abbr         = {SemEval},
+  bibtex_show  = {true},
+  author       = {Juan Cuadrado and Elizabeth Martinez and Anderson Morillo and Daniel Peña and Kevin Sossa and Juan Carlos Martinez-Santos and Edwin Puertas},
+  title        = {UTB-NLP at SemEval-2023 Task 3: Weirdness, Lexical Features for Detecting Categorical Framings, and Persuasion in Online News},
+  journal      = {Proc. of SemEval},
+  year         = {2023},
+  doi          = {10.18653/V1/2023.SEMEVAL-1.214},
+  html         = {https://aclanthology.org/2023.semeval-1.214},
+  selected     = {true}
+}
+
+@misc{DepressionDetection2023,
+  abbr         = {ResearchGate},
+  bibtex_show  = {true},
+  author       = {Edwin Puertas and Juan Carlos Martinez-Santos},
+  title        = {Automated Depression Detection in Text Data: Leveraging Lexical Features, Phonesthemes Embedding, and RoBERTa Transformer Model},
+  year         = {2023},
+  html         = {https://www.researchgate.net/publication/374724906}
+}
+
+@misc{FinancES2023,
+  abbr         = {ResearchGate},
+  bibtex_show  = {true},
+  author       = {Anderson Morillo and Daniel Peña and Edwin Puertas},
+  title        = {Team UTB-NLP at FinancES 2023: Financial Targeted Sentiment Analysis Using a Phonestheme Semantic Approach},
+  year         = {2023},
+  html         = {https://www.researchgate.net/publication/374725043}
 }
 
 @article{Marrugo2023,
-   author = {Duván A. Marrugo and Juan Carlos Martinez-Santos and Edwin Puertas},
-   doi = {10.1007/978-3-031-46739-4_11},
-   isbn = {9783031467387},
-   issn = {18650937},
-   pages = {115-126},
-   title = {Natural Language Contents Evaluation System for Multi-class News Categorization Using Machine Learning and Transformers},
-   year = {2023},
-}
-@article{Cuadrado2023,
-   abstract = {The adoption of photovoltaic (PV) systems has increased significantly in recent years, driven by the demand for off-grid and on-grid residential and commercial applications. However, the high initial investment required for PV installations has limited their widespread adoption. Governments and marketing enterprises have implemented different strategies to promote PV systems to overcome this barrier, focusing on the return on investment (ROI) concept. However, the conventional approach uses limited economic factors to calculate the ROI. It fails to consider the impact of external factors, such as system degradation, which can vary between systems. To address this issue, we propose a new methodology to estimate the ROI of a photovoltaic system with greater accuracy. Our approach incorporates system-predicted degradation, calculated using historical meteorological data and prediction techniques. We applied this methodology to a photovoltaic system installed at the Universidad Tecnologica de Bolivar (UTB) in Cartagena and evaluated it against five different approaches. The results show that our proposed method offers a more accurate and reliable estimation of the ROI of a photovoltaic system, considering a broader range of factors. Overall, our work contributes to advancing the understanding of photovoltaic system ROI calculation and promotes using sustainable energy sources. By providing a more precise estimation of the ROI of a photovoltaic system, our methodology can help potential investors make more informed decisions and promote the adoption of clean energy sources.},
-   author = {Juan Cuadrado and Elizabeth Martinez and Edwin Puertas and Juan Carlos Martinez-Santos},
-   doi = {10.1109/TLA.2023.10305232},
-   issn = {15480992},
-   issue = {12},
-   journal = {IEEE Latin America Transactions},
-   keywords = {Degradation Model,Performance Ratio,Photovoltaic System,Return on Investment},
-   month = {12},
-   pages = {1282-1290},
-   publisher = {IEEE Computer Society},
-   title = {Long-Term Effects of Degradation on Photovoltaic System Return on Investment},
-   volume = {21},
-   year = {2023},
-}
-@article{Puertas2023,
-   abstract = {The spread of misinformation and disinformation online represents a significant challenge in today's society. This paper proposes implementing a news verifier web application that uses artificial intelligence techniques to determine the veracity of news provided by users. The system consists of three stages: user input validation, selection of relevant sources, and information analysis. We trained a logistic regression model with an in-house dataset of 2000 sentences for input validation. We utilized cosine similarity and FastText for source selection. Finally, a large language model analyzes the context and coherence of selected articles to determine veracity. The transparent presentation of results fosters media literacy. While some implementation details may differ due to time constraints, this paper provides the overall methodology and architecture of the system.},
-   author = {Edwin Puertas and Jenifer Vasquez and Juan Carlos Martinez-Santos},
-   doi = {10.1109/C358072.2023.10436244},
-   isbn = {9798350341799},
-   journal = {1st IEEE Colombian Caribbean Conference, C3 2023},
-   keywords = {Automated fact-checking systems,Fake news and mis/disinformation,Natural language processing models,Neural networks,System architecture,and software frameworks,machine learning techniques},
-   publisher = {Institute of Electrical and Electronics Engineers Inc.},
-   title = {RealCheck: A Web Application for Fake News Detection Using Natural Language Processing},
-   year = {2023},
-}
-@article{Martinez2023,
-   abstract = {Social networks are now integral to modern life, offering instant global communication. Unfortunately, this ease of connectivity has also led to the misuse of freedom, with many social media users expressing inappropriate and often sexist comments. In response, the field of natural language processing has actively sought solutions to detect and counteract such content. Our study builds upon our previous work presented during the SemEval 2023 competition. Initial results, achieved using only lexical features, prompted a thorough reevaluation. Recognizing the potential of advanced techniques, we embarked on a comprehensive exploration to enhance our approach. Leveraging our experience, we focused on a feature union strategy. By seamlessly combining the 'twitter-roberta-base-sentiment-latest' transformer model with established lexical features, we developed a refined methodology that transcends the limitations of individual elements. This approach improved performance and demonstrated the synergistic potential of merging these distinct features. Our improved method revealed significant enhancements, underscoring the effectiveness of our methodology in boosting detection capabilities. It led to a notable improvement of approximately 20% in binary classification accuracy, a substantial leap from our previous results. The strategic blend of linguistic and transformer-based features emerged as the driving force behind this significant advancement.},
-   author = {Elizabeth Martinez and Juan Cuadrado and Juan Carlos Martinez-Santos and Edwin Puertas},
-   doi = {10.1109/C358072.2023.10436298},
-   isbn = {9798350341799},
-   journal = {1st IEEE Colombian Caribbean Conference, C3 2023},
-   keywords = {Lexical Features,Misogyny,Sexism,Social Media,Transformers},
-   publisher = {Institute of Electrical and Electronics Engineers Inc.},
-   title = {Detection of Online Sexism Using Lexical Features and Transformer},
-   year = {2023},
-}
-@article{Pajaro2024,
-   abstract = {The automatic identification of medical errors in clinical notes is crucial for improving the quality of healthcare services.LLMs emerge as a powerful artificial intelligence tool for automating this task. However, LLMs present vulnerabilities, high costs, and sometimes a lack of transparency. This article addresses the detection of medical errors through the fine-tuning approach, conducting a comprehensive comparison between various models and exploring in depth the components of the machine learning pipeline. The results obtained with the fine-tuned ClinicalBert and Gated recurrent units (Gru) models show an accuracy of 0.56 and 0.55, respectively. This approach not only mitigates the problems associated with the use of LLMs but also demonstrates how exhaustive iteration in critical phases of the pipeline, especially in feature selection, can facilitate the automation of clinical record analysis.},
-   author = {Juan Pajaro and Edwin Puertas and David Villate and Laura Estrada and Laura Tinjaca},
-   doi = {10.18653/V1/2024.CLINICALNLP-1.46},
-   isbn = {9798891761094},
-   month = {7},
-   pages = {461-469},
-   publisher = {Association for Computational Linguistics (ACL)},
-   title = {VerbaNexAI at MEDIQA-CORR: Efficacy of GRU with BioWordVec and ClinicalBERT in Error Correction in Clinical Notes},
-   year = {2024},
-}
-@article{,
-   abstract = {Enhancing the forecasting accuracy of energy spot prices is vital for decision-making in energy trading. This study evaluates various feature selection methods and regression models to predict energy prices in Colombia. We compare Principal Components Analysis, Pearson Correlation Coefficients, Mutual Information, and Least Absolute Shrinkage methods with Ran-dom Forest, Extra Gradient boost, and CatBoost models. Mutual Information is the most compelling feature selection method, improving prediction accuracy notably. It identifies features such as reserves, month, and Ocean Nino Index in the study. The Random Forest model with Mutual Information-based selection achieved an R2 value of 95%. The research emphasizes the enhanced model accuracy in spot energy price prediction using Mutual Information-based feature selection. Future research should focus on cross-validation techniques and the impact of temporal data for further improvements.},
-   author = {Mauro A. Gonzalez-Sierra and Rafael Arnedo and Edwin Puertas and Juan Carlos Martinez-Santos},
-   doi = {10.1109/ANDESCON61840.2024.10755699},
-   isbn = {9798350355284},
-   journal = {IEEE Andescon, ANDESCON 2024 - Proceedings},
-   keywords = {Decision Trees,Machine Learning,Spot Energy Price},
-   publisher = {Institute of Electrical and Electronics Engineers Inc.},
-   title = {Feature Selection for Forecasting of Energy Spot Price in the Colombian Market},
-   year = {2024},
+  abbr         = {CCIS},
+  bibtex_show  = {true},
+  author       = {Duván A. Marrugo and Juan Carlos Martinez-Santos and Edwin Puertas},
+  title        = {Natural Language Contents Evaluation System for Multi-class News Categorization Using Machine Learning and Transformers},
+  journal      = {Commun. Comput. Inf. Sci.},
+  year         = {2023},
+  doi          = {10.1007/978-3-031-46739-4_11},
+  html         = {https://link.springer.com/chapter/10.1007/978-3-031-46739-4_11}
 }
 
-@article{,
-   abstract = {Tourism has emerged as an industry powered by technological advancements that enrich tourists’ experiences. Digital interaction has transformed how tourists explore, share, and select destinations and activities. Platforms such as TripAdvisor and FourSquare stand out as sources of information and analysis, enabling understanding of tourist behavior and adapting offerings to tourists’ preferences. In this context, we analyzed comments extracted from TripAdvisor and FourSquare, applying Latent Semantic Analysis (LSA) techniques. Based on these data, segmentation of tourist types was implemented to gain a deep and detailed understanding of tourist behavior in the Sucre department, thus contributing to informed decision-making to enhance the quality of the tourism offer and experience.},
-   author = {Danileth Almanza-Gonzalez and Edwin Puertas and Juan Carlos Martinez-Santos},
-   doi = {10.1007/978-3-031-75233-9_3},
-   isbn = {9783031752322},
-   issn = {18650937},
-   journal = {Communications in Computer and Information Science},
-   keywords = {LSA,Tourism in Sucre,Tourist Experience,Tourist Type},
-   pages = {27-40},
-   publisher = {Springer Science and Business Media Deutschland GmbH},
-   title = {Unveiling Tourist Profiles in the Department of Sucre: A Text Analysis Approach},
-   volume = {2208 CCIS},
-   year = {2024},
-}
-@article{Tovar2024,
-   abstract = {This study presents an automated system for detecting diseases in cucumber crops using Convolutional Neural Networks (CNN). Given the importance of agriculture and the challenges crops face due to pests and diseases, a vision-based approach is proposed to improve the early and accurate identification of diseases in cucumbers. Three CNN architectures were evaluated: Xception, VGG16, and ResNet50, using a balanced dataset of images of healthy and diseased cucumber leaves. The Xception model showed the best performance with an accuracy of 93.45% and a loss of 0.4842, surpassing the other models. Image preprocessing and transfer learning were key to achieving these results. Despite the good results, challenges were identified in accurately classifying some images, suggesting areas for future improvement. This system provides a valuable tool for farmers, enabling early detection and rapid decision-making to control diseases, which can significantly improve crop quality and yield. Future research could integrate this system with mobile technologies and drones for more efficient real-time monitoring.},
-   author = {Andrea Menco Tovar and Edwin Puertas and Juan Carlos Martinez-Santos},
-   doi = {10.1007/978-3-031-75233-9_12},
-   isbn = {9783031752322},
-   issn = {18650937},
-   journal = {Communications in Computer and Information Science},
-   keywords = {Artificial intelligence in agriculture,Convolutional Neural Networks (CNN),Cucumber crops,Disease detection,Transfer learning},
-   pages = {156-167},
-   publisher = {Springer Science and Business Media Deutschland GmbH},
-   title = {Implementation of Convolutional Neural Networks for Automated Disease Detection in Cucumber Crops},
-   volume = {2208 CCIS},
-   year = {2024},
-}
-@article{,
-   abstract = {The decision to pursue a professional career is paramount for young people. Yet, the absence of adequate guidance can result in misguided choices. In Colombia, most high school students need a clearer understanding of their future career aspirations. This lack of clarity often leads to a significant dropout rate at the university level. Furthermore, students entering university tend to consider something other than STEM careers, which could result in a mismatch between their labor skills and future economic needs. To address this issue, we apply machine learning, data mining, and utilizing information from tests such as Saber 11 and the Gardner test, which aim to predict viability within their capabilities oriented toward STEM careers. Applying machine learning models such as XGBoost, Stacking, Random Forest, Decision Tree, and KNN has shown promising results, albeit with challenges in balancing precision and recall for different classes. These advancements represent an opportunity to enhance vocational guidance and increase the likelihood of success and job satisfaction among young people.},
-   author = {Melissa Moreno-Novoa and Edwin Puertas and Juan Carlos Martinez-Santos},
-   doi = {10.1007/978-3-031-75236-0_12},
-   isbn = {9783031752353},
-   issn = {18650937},
-   journal = {Communications in Computer and Information Science},
-   keywords = {ICFES tests,STEM,machine learning,multiple intelligences},
-   pages = {150-162},
-   publisher = {Springer Science and Business Media Deutschland GmbH},
-   title = {Enhancing Vocational Guidance with Machine Learning: Predicting STEM Career Viability for High School Students},
-   volume = {2209 CCIS},
-   year = {2024},
-}
-@article{Muvdi2025,
-   abstract = {This research paper presents a novel software tool designed to revolutionize speech therapy for individuals with Childhood Apraxia of Speech (CAS), also known as Developmental Verbal Dyspraxia. The software offers a comprehensive multi-modal analysis approach, utilizing video, audio, and speech-to-text data to extract valuable insights into articulation patterns, head pose, audio characteristics, and word usage. This information empowers Speech-Language Pathologists (SLPs) with data-driven tools for a more precise assessment and development of personalized treatment plans. While the current study employs data from just one healthy subject to evaluate the software’s overall accuracy and data coherence, the functionalities are promising to improve therapy effectiveness for individuals with CAS, giving space for further experiments, analysis and validations with experts. The paper explores how the software’s capabilities can complement existing therapies like PROMPT, Touch-Cue Method, and Melodic Intonation Therapy, based on a cognitive perspective, ultimately aiming to transform the field of speech-language pathology and enhance the lives of those affected by speech disorders.},
-   author = {David Muvdi and Mateo R. Hernández and Eiker J. Cifuentes and Andrea Di Somma and Francesco Chiappone and Vicenzo Di Maro and Juan Carlos Martínez-Santos and Edwin Puertas},
-   doi = {10.1007/978-3-031-80366-6_2},
-   isbn = {9783031803659},
-   issn = {16113349},
-   journal = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics) },
-   keywords = {Childhood Apraxia of Speech,Multi-modal,Software,Speech disorders,Speech language pathologist},
-   pages = {14-25},
-   publisher = {Springer Science and Business Media Deutschland GmbH},
-   title = {Mapping Motion: A Cognitive Approach to Dyspraxia Multimodal Analysis},
-   volume = {15277 LNCS},
-   year = {2025},
+@article{Cuadrado2023PV,
+  abbr         = {IEEE Latin Am. Trans.},
+  bibtex_show  = {true},
+  author       = {Juan Cuadrado and Elizabeth Martinez and Edwin Puertas and Juan Carlos Martinez-Santos},
+  title        = {Long-Term Effects of Degradation on Photovoltaic System Return on Investment},
+  journal      = {IEEE Latin America Transactions},
+  year         = {2023},
+  doi          = {10.1109/TLA.2023.10305232},
+  html         = {https://ieeexplore.ieee.org/document/10305232}
 }
 
-@article{Morillo2024,
-   abstract = {This paper presents an artificial intelligence model designed to detect semantic relationships in natural language, addressing the challenges of SemEval 2024 Task 1. Our goal is to advance machine understanding of the subtleties of human language through semantic analysis. Using a novel combination of convolutional neural networks (CNNs), long short-term memory (LSTM) networks, and an attention mechanism, our model is trained on the STR-2022 dataset. This approach enhances its ability to detect semantic nuances in different texts. The model achieved an 81.92% effectiveness rate and ranked 24th in SemEval 2024 Task 1. These results demonstrate its robustness and adaptability in detecting semantic relationships and validate its performance in diverse linguistic contexts. Our work contributes to natural language processing by providing insights into semantic textual relatedness. It sets a benchmark for future research and promises to inspire innovations that could transform digital language processing and interaction.},
-   author = {Anderson Morillo and Daniel Peña and Juan Carlos Martinez Santos and Edwin Puertas},
-   doi = {10.18653/V1/2024.SEMEVAL-1.194},
-   isbn = {9798891761070},
-   month = {7},
-   pages = {1344-1350},
-   publisher = {Association for Computational Linguistics (ACL)},
-   title = {VerbaNexAI Lab at SemEval-2024 Task 1: A Multilayer Artificial Intelligence Model for Semantic Relationship Detection},
-   year = {2024},
+@inproceedings{Puertas2023C3,
+  abbr         = {IEEE C3},
+  bibtex_show  = {true},
+  author       = {Edwin Puertas and Jenifer Vasquez and Juan Carlos Martinez-Santos},
+  title        = {RealCheck: A Web Application for Fake News Detection Using Natural Language Processing},
+  booktitle    = {1st IEEE Colombian Caribbean Conference (C3)},
+  year         = {2023},
+  publisher    = {IEEE},
+  doi          = {10.1109/C358072.2023.10436244},
+  html         = {https://ieeexplore.ieee.org/document/10436244}
 }
-@article{Garcia2024,
-   abstract = {This study introduces an innovative approach to emotion recognition and reasoning about emotional shifts in code-mixed conversations, leveraging the NRC VAD Lexicon and computational models such as Transformer and GRU. Our methodology systematically identifies and categorizes emotional triggers, employing Emotion Flip Reasoning (EFR) and Emotion Recognition in Conversation (ERC). Through experiments with the MELD and MaSaC datasets, we demonstrate the model's precision in accurately identifying emotional shift triggers and classifying emotions, evidenced by a significant improvement in accuracy as shown by an increase in the F1 score when including VAD analysis. These results underscore the importance of incorporating complex emotional dimensions into conversation analysis, paving new pathways for understanding emotional dynamics in code-mixed texts.},
-   author = {Santiago Garcia and Elizabeth Martinez and Juan Cuadrado and Juan Martinez-santos and Edwin Puertas},
-   doi = {10.18653/V1/2024.SEMEVAL-1.192},
-   isbn = {9798891761070},
-   month = {7},
-   pages = {1332-1338},
-   publisher = {Association for Computational Linguistics (ACL)},
-   title = {VerbaNexAI Lab at SemEval-2024 Task 10: Emotion recognition and reasoning in mixed-coded conversations based on an NRC VAD approach},
-   year = {2024},
-}
-@article{Pacheco2024,
-   abstract = {This study delineates our participation in the SemEval-2024 Task 3: Multimodal Emotion Cause Analysis in Conversations, focusing on developing and applying an innovative methodology for emotion detection and cause analysis in conversational contexts. Leveraging logistic regression, we analyzed conversational utterances to identify emotions per utterance. Subsequently, we employed a dependency analysis pipeline, utilizing SpaCy to extract significant chunk features, including object, subject, adjectival modifiers, and adverbial clause modifiers. These features were analyzed within a graph-like framework, conceptualizing the dependency relationships as edges connecting emotional causes (tails) to their corresponding emotions (heads). Despite the novelty of our approach, the preliminary results were unexpectedly humbling, with a consistent score of 0.0 across all evaluated metrics. This paper presents our methodology, the challenges encountered, and an analysis of the potential factors contributing to these outcomes, offering insights into the complexities of emotion-cause analysis in multimodal conversational data.},
-   author = {Victor Pacheco and Elizabeth Martinez and Juan Cuadrado and Juan Carlos Martinez Santos and Edwin Puertas},
-   doi = {10.18653/V1/2024.SEMEVAL-1.193},
-   isbn = {9798891761070},
-   month = {7},
-   pages = {1339-1343},
-   publisher = {Association for Computational Linguistics (ACL)},
-   title = {VerbaNexAI Lab at SemEval-2024 Task 3: Deciphering emotional causality in conversations using multimodal analysis approach},
-   year = {2024},
-}
-
