--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{Cuadrado2023,
+@article{Cuadrado2023Semeval,
   abbr         = {SemEval},
   bibtex_show  = {true},
   author       = {Juan Cuadrado and Elizabeth Martinez and Anderson Morillo and Daniel Peña and Kevin Sossa and Juan Carlos Martinez-Santos and Edwin Puertas},
@@ -65,4 +65,138 @@
   publisher    = {IEEE},
   doi          = {10.1109/C358072.2023.10436244},
   html         = {https://ieeexplore.ieee.org/document/10436244}
+}
+
+@inproceedings{Martinez2023C3,
+  abbr         = {IEEE C3},
+  bibtex_show  = {true},
+  author       = {Elizabeth Martinez and Juan Cuadrado and Juan Carlos Martinez-Santos and Edwin Puertas},
+  title        = {Detection of Online Sexism Using Lexical Features and Transformer},
+  booktitle    = {1st IEEE Colombian Caribbean Conference (C3)},
+  year         = {2023},
+  publisher    = {IEEE},
+  doi          = {10.1109/C358072.2023.10436298},
+  html         = {https://ieeexplore.ieee.org/document/10436298}
+}
+
+@article{Pajaro2024,
+  abbr         = {ClinicalNLP},
+  bibtex_show  = {true},
+  author       = {Juan Pajaro and Edwin Puertas and David Villate and Laura Estrada and Laura Tinjaca},
+  title        = {VerbaNexAI at MEDIQA-CORR: Efficacy of GRU with BioWordVec and ClinicalBERT in Error Correction in Clinical Notes},
+  journal      = {Proc. of ClinicalNLP},
+  year         = {2024},
+  doi          = {10.18653/V1/2024.CLINICALNLP-1.46},
+  html         = {https://aclanthology.org/2024.clinicalnlp-1.46}
+}
+
+@inproceedings{Gonzalez2024,
+  abbr         = {ANDESCON},
+  bibtex_show  = {true},
+  author       = {Mauro A. Gonzalez-Sierra and Rafael Arnedo and Edwin Puertas and Juan Carlos Martinez-Santos},
+  title        = {Feature Selection for Forecasting of Energy Spot Price in the Colombian Market},
+  booktitle    = {IEEE ANDESCON},
+  year         = {2024},
+  publisher    = {IEEE},
+  doi          = {10.1109/ANDESCON61840.2024.10755699},
+  html         = {https://ieeexplore.ieee.org/document/10755699}
+}
+
+@misc{DIPROMATS2024,
+  abbr         = {ResearchGate},
+  bibtex_show  = {true},
+  author       = {Edwin Puertas and Juan Carlos Martinez-Santos},
+  title        = {VerbaNex AI at DIPROMATS 2024: Enhancing Propaganda Detection in Diplomatic Tweets with Fine-Tuned BERT and Integrated NLP Techniques},
+  year         = {2024},
+  html         = {https://www.researchgate.net/publication/383876929}
+}
+
+@misc{HOMOMEX2024,
+  abbr         = {ResearchGate},
+  bibtex_show  = {true},
+  author       = {Edwin Puertas and Juan Carlos Martinez-Santos},
+  title        = {VerbaNexAI Lab at HOMO-MEX 2024: Multiclass and Multilabel Detection of LGBTQ+ Phobic Content Using Transformers},
+  year         = {2024},
+  html         = {https://www.researchgate.net/publication/383877018}
+}
+
+@inproceedings{Almanza2024,
+  abbr         = {CCIS},
+  bibtex_show  = {true},
+  author       = {Danileth Almanza-Gonzalez and Edwin Puertas and Juan Carlos Martinez-Santos},
+  title        = {Unveiling Tourist Profiles in the Department of Sucre: A Text Analysis Approach},
+  booktitle    = {Commun. Comput. Inf. Sci.},
+  year         = {2024},
+  publisher    = {Springer},
+  doi          = {10.1007/978-3-031-75233-9_3},
+  html         = {https://link.springer.com/chapter/10.1007/978-3-031-75233-9_3}
+}
+
+@inproceedings{Tovar2024,
+  abbr         = {CCIS},
+  bibtex_show  = {true},
+  author       = {Andrea Menco Tovar and Edwin Puertas and Juan Carlos Martinez-Santos},
+  title        = {Implementation of Convolutional Neural Networks for Automated Disease Detection in Cucumber Crops},
+  booktitle    = {Commun. Comput. Inf. Sci.},
+  year         = {2024},
+  publisher    = {Springer},
+  doi          = {10.1007/978-3-031-75233-9_12},
+  html         = {https://link.springer.com/chapter/10.1007/978-3-031-75233-9_12}
+}
+
+@inproceedings{Moreno2024,
+  abbr         = {CCIS},
+  bibtex_show  = {true},
+  author       = {Melissa Moreno-Novoa and Edwin Puertas and Juan Carlos Martinez-Santos},
+  title        = {Enhancing Vocational Guidance with Machine Learning: Predicting STEM Career Viability for High School Students},
+  booktitle    = {Commun. Comput. Inf. Sci.},
+  year         = {2024},
+  publisher    = {Springer},
+  doi          = {10.1007/978-3-031-75236-0_12},
+  html         = {https://link.springer.com/chapter/10.1007/978-3-031-75236-0_12}
+}
+
+@inproceedings{Muvdi2025,
+  abbr         = {LNCS},
+  bibtex_show  = {true},
+  author       = {David Muvdi and Mateo R. Hernández and Eiker J. Cifuentes and Andrea Di Somma and Francesco Chiappone and Vicenzo Di Maro and Juan Carlos Martínez-Santos and Edwin Puertas},
+  title        = {Mapping Motion: A Cognitive Approach to Dyspraxia Multimodal Analysis},
+  booktitle    = {Lect. Notes Comput. Sci.},
+  year         = {2025},
+  publisher    = {Springer},
+  doi          = {10.1007/978-3-031-80366-6_2},
+  html         = {https://link.springer.com/chapter/10.1007/978-3-031-80366-6_2}
+}
+
+@article{Morillo2024Semeval,
+  abbr         = {SemEval},
+  bibtex_show  = {true},
+  author       = {Anderson Morillo and Daniel Peña and Juan Carlos Martinez Santos and Edwin Puertas},
+  title        = {VerbaNexAI Lab at SemEval-2024 Task 1: A Multilayer Artificial Intelligence Model for Semantic Relationship Detection},
+  journal      = {Proc. of SemEval},
+  year         = {2024},
+  doi          = {10.18653/V1/2024.SEMEVAL-1.194},
+  html         = {https://aclanthology.org/2024.semeval-1.194}
+}
+
+@article{Garcia2024Semeval,
+  abbr         = {SemEval},
+  bibtex_show  = {true},
+  author       = {Santiago Garcia and Elizabeth Martinez and Juan Cuadrado and Juan Martinez-santos and Edwin Puertas},
+  title        = {VerbaNexAI Lab at SemEval-2024 Task 10: Emotion recognition and reasoning in mixed-coded conversations based on an NRC VAD approach},
+  journal      = {Proc. of SemEval},
+  year         = {2024},
+  doi          = {10.18653/V1/2024.SEMEVAL-1.192},
+  html         = {https://aclanthology.org/2024.semeval-1.192}
+}
+
+@article{Pacheco2024Semeval,
+  abbr         = {SemEval},
+  bibtex_show  = {true},
+  author       = {Victor Pacheco and Elizabeth Martinez and Juan Cuadrado and Juan Carlos Martinez Santos and Edwin Puertas},
+  title        = {VerbaNexAI Lab at SemEval-2024 Task 3: Deciphering emotional causality in conversations using multimodal analysis approach},
+  journal      = {Proc. of SemEval},
+  year         = {2024},
+  doi          = {10.18653/V1/2024.SEMEVAL-1.193},
+  html         = {https://aclanthology.org/2024.semeval-1.193}
 }
